<resources>
    <string name="app_name">ET</string>
    <string name="title_home">首页</string>
    <string name="title_details">详情</string>
    <string name="title_c2c">C2C</string>
    <string name="title_c2c_name">法币兑换</string>
    <string name="title_order">订单</string>
    <string name="title_wallet">钱包</string>
    <!--<string name="title_wallet2"><![CDATA[≈%f CNY]]></string>-->
    <string name="total_cny_money">≈%f CNY</string>
    <!-- 不用转义 -->
    <string name="mian_pirce_red"><![CDATA[<font color="#dc2527">%1$s</font><font color="#999999">\/%2$s</font>]]></string>
    <string name="mian_pirce_green"><![CDATA[<font color="#44c08f">%1$s</font><font color="#999999">\/%2$s</font>]]></string>
    <string name="home_item_volum"><![CDATA[Volum:<font color="#FFFFFF"> %1$s</font> %2$s]]></string>
    <string name="hint_login_account">请输入账户</string>
    <string name="hint_login_pwd">请输入登陆密码</string>
    <string name="hint_login_reinput_pwd">请再次输入登录密码</string>
    <string name="hint_transaction_pwd">请输入交易密码</string>
    <string name="hint_register_account">请输入手机或邮箱</string>
    <string name="hint_verification_code">请输入验证码</string>
    <string name="hint_common_mail">请输入常用的邮箱</string>
    <string name="hint_referee">请输入推荐人(选填)</string>
    <string name="hint_reset_pwd">请输入登录密码</string>
    <string name="hint_reinput_pwd">请再次输入登陆密码</string>
    <string name="forget_pwd">忘记密码</string>

    <string name="next_step">下一步</string>
    <string name="save">保存</string>
    <string name="submit_audit">提交审核</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_service_agreement">服务协议</string>
    <string name="setting_identity_authentication">身份认证</string>
    <string name="setting_bank_card">银行卡信息</string>
    <string name="setting_security_center">安全中心</string>
    <string name="setting_certified">已认证</string>
    <string name="log_out">退出登录</string>
    <string name="hint_identity_authentication">注: ETT团队重视保障用户的个人信息，用户的个人信息将被严格保密。\n此实名认证系统仅限于ETT团队认证身份信息，保证不对外公开或向第三方提供用户个人信息.</string>
    <string name="hint_input_name">请输入您的姓名</string>
    <string name="hint_input_idcard">请输入正确的身份证号</string>
    <string name="hint_idcard_1">上传身份证反面照</string>
    <string name="hint_idcard_2">上传身份证正面照</string>
    <string name="hint_idcard_3">上传手持身份证及ID照</string>
    <string name="hint_idcard_select1">请选择身份证反面照</string>
    <string name="hint_idcard_select2">请选择身份证正面照</string>
    <string name="hint_idcard_select3">请选择手持身份证及ID照</string>


    <string name="safe_login_pwd">登录密码</string>
    <string name="safe_transaction_pwd">交易密码</string>
    <string name="safe_fingerprint">指纹</string>
    <string name="safe_gesture">手势</string>
    <string name="goto_modify">去修改</string>
    <string name="hint_close">关闭</string>
    <string name="hint_open">开启</string>
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="reinput_new_pwd">请再次输入新密码</string>
    <string name="confirm">确定</string>
    <string name="verification_code">验证码</string>

    <string name="toast_hint_verification_code">请输入正确的验证码</string>
    <string name="toast_hint_account">请填写正确手机号或者邮箱</string>
    <string name="toast_hint_pwd_inconsistent">两次输入的密码不一致</string>

    <string name="c2c_btn">%1$s(%2$s)</string>
    <string name="hint_buy_count">请输入数量</string>
    <string name="hint_dialog_title">%1$s 充值或者提现</string>

    <string name="item_coin_list_text1"><![CDATA[<font color="#ffffff">%1$s</font><font color="#8c99a6"> 全部</font>]]></string>
    <string name="item_coin_list_text2"><![CDATA[<font color="#ffffff">≈%1$s</font><font color="#8c99a6"> CNY</font>]]></string>
    <string name="item_coin_list_text3"><![CDATA[<font color="#ffffff">%1$s</font><font color="#8c99a6"> 冻结</font>]]></string>


    <string name="item_withdrawal_text1"><![CDATA[<font color="#ffffff">%1$s %2$s</font><font color="#8c99a6"> 可用</font>]]></string>
    <string name="item_withdrawal_text2"><![CDATA[<font color="#ffffff">%1$s %2$s</font><font color="#8c99a6"> 冻结</font>]]></string>
    <string name="item_withdrawal_text3"><![CDATA[<font color="#ffffff">%1$s %2$s</font><font color="#8c99a6"> 全部</font>]]></string>

    <string name="item_order_text"><![CDATA[<font color="#ffffff">%1$s  </font><font color="#8c99a6">%2$s</font>]]></string>
    <string name="hint_max">交易数量不能超过%1$s</string>
    <string name="hint_min">交易数量不能低于%1$s</string>
    <string name="c2c_order_details_remark"><![CDATA[<font color="#dc2527">%1$s</font>(请务必填写)</font>]]></string>

    <string name="c2c_hint">1.买卖商户均为实地考察认证商户，并提供100万usdt保证金，您每次兑换会冻结商户资产，商户资产不够时，不能接单，可放心兑换;\n\n2.买卖商户均为实名认证商户，并提供保证金，可放心兑换；\n\n3.如需申请成为商户请发邮件到support@ettex.one；\n\n4.请使用本人绑定的银行卡进行汇款，其他任何方式汇款都会退款。（禁止微信和支付宝）\n\n5.商家处理时间9:00 - 21:00非处理时间的订单会在第二天9:00开始处理，一般接单后24小时内会完成打款。\n\n6.如果产生交易纠纷，请及时联系E网全球的客服进行处理。</string>

</resources>
