<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingLeft="@dimen/common_margin_space_20"
    android:paddingRight="@dimen/common_margin_space_20">

    <com.oneway.ui.widget.CommomHorizontalLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:left_text="@string/setting_about_us"
        app:left_text_color="@color/white"
        app:moreIcon="@mipmap/more_right_black" />

    <com.oneway.ui.widget.CommomHorizontalLayout
        android:id="@+id/service_agreement_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:left_text="@string/setting_service_agreement"
        app:left_text_color="@color/white"
        app:moreIcon="@mipmap/more_right_black" />

    <com.oneway.ui.widget.CommomHorizontalLayout
        android:id="@+id/identity_authentication_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:left_text="@string/setting_identity_authentication"
        app:left_text_color="@color/white"
        app:right_text="@string/setting_certified"
        app:right_text_color="@color/white" />

    <com.oneway.ui.widget.CommomHorizontalLayout
        android:id="@+id/bank_card_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:left_text="@string/setting_bank_card"
        app:left_text_color="@color/white"
        app:moreIcon="@mipmap/more_right_black" />

    <com.oneway.ui.widget.CommomHorizontalLayout
        android:id="@+id/security_center_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:left_text="@string/setting_security_center"
        app:left_text_color="@color/white"
        app:moreIcon="@mipmap/more_right_black" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="28dp"
        android:paddingTop="26dp"
        android:text="@string/log_out"
        android:textColor="@color/logout_color"
        android:textSize="12sp" />
</LinearLayout>