<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingLeft="@dimen/common_margin_space_20"
    android:paddingRight="@dimen/common_margin_space_20">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/old_pwd"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:hint="@string/input_old_pwd"
            android:textColor="@color/text_hint_gray"
            android:textColorHint="@string/input_old_pwd"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimary" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/new_pwd"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:hint="@string/input_old_pwd"
            android:textColor="@color/text_hint_gray"
            android:textColorHint="@string/input_new_pwd"
            android:textSize="12sp" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_pwd"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:hint="@string/input_old_pwd"
            android:textColor="@color/text_hint_gray"
            android:textColorHint="@string/reinput_new_pwd"
            android:textSize="12sp" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="28dp"
        android:paddingTop="26dp"
        android:text="@string/log_out"
        android:textColor="@color/logout_color"
        android:textSize="12sp" />
</LinearLayout>