<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_idcard1"
        android:layout_width="170dp"
        android:layout_height="105dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/id_card_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/hint_idcard_1"
        android:textColor="@color/text8c"
        android:textSize="11sp" />

    <ImageView
        android:id="@+id/iv_idcard2"
        android:layout_width="170dp"
        android:layout_height="105dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:src="@mipmap/id_card_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/hint_idcard_2"
        android:textColor="@color/text8c"
        android:textSize="11sp" />

    <ImageView
        android:id="@+id/iv_idcard3"
        android:layout_width="170dp"
        android:layout_height="105dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:src="@mipmap/id_card_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/hint_idcard_3"
        android:textColor="@color/text8c"
        android:textSize="11sp" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.oneway.ui.widget.btn.StateButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_btn_hight"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="@dimen/common_margin_space_20"
        android:layout_marginRight="@dimen/common_margin_space_20"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/submit_audit"
        app:normalBackgroundColor="@color/red_btn"
        app:normalTextColor="@android:color/white"
        app:pressedBackgroundColor="@color/red_btn"
        app:pressedTextColor="@android:color/white"
        app:radius="6dp" />


</LinearLayout>